# model/form.go
@@ -8,19 +8,23 @@ import (
 )
 
 type Form struct {
-	MID           primitive.ObjectID `json:"id" bson:"_id,omitempty"`
-	Fid           string             `json:"fid" bson:"fid"`
-	StudentID     string             `json:"student_id" bson:"student_id"`
-	College       string             `json:"college" bson:"college"`
-	Contact       string             `json:"contact" bson:"contact"`
-	TeacherID     string             `json:"teacher_id" bson:"teacher_id"`
-	CreateAt      string             `json:"create_at" bson:"create_at"`
-	FromDorm      string             `json:"from_dorm" bson:"from_dorm"`
-	ToDorm        string             `json:"to_dorm" bson:"to_dorm"`
-	ToBed         string             `json:"to_bed" bson:"to_bed"`
-	Context       string             `json:"context" bson:"context"`
-	TeacherAdvice string             `json:"teacher_advice" bson:"teacher_advice"`
-	Status        int                `json:"status" bson:"status"`
+	MID             primitive.ObjectID `json:"id" bson:"_id,omitempty"`
+	Fid             string             `json:"fid" bson:"fid"` // deprecated
+	StudentID       string             `json:"student_id" bson:"student_id"`
+	College         string             `json:"college" bson:"college"`
+	Contact         string             `json:"contact" bson:"contact"`
+	TeacherID       string             `json:"teacher_id" bson:"teacher_id"`
+	CreateAt        string             `json:"create_at" bson:"create_at"`
+	FromDorm        string             `json:"from_dorm" bson:"from_dorm"`
+	FromBed         string             `json:"from_bed" bson:"from_bed"`
+	ToDorm          string             `json:"to_dorm" bson:"to_dorm"`
+	ToBed           string             `json:"to_bed" bson:"to_bed"`
+	Context         string             `json:"context" bson:"context"`
+	TeacherAdvice   string             `json:"teacher_advice" bson:"teacher_advice"`
+	CommunityAdvice string             `json:"community_advice" bson:"community_advice"`
+	XGBAdvice       string             `json:"xgb_advice" bson:"xgb_advice"`
+	HQBZBAdvice     string             `json:"hqzb_advice" bson:"hqzb_advice"`
+	Status          int                `json:"status" bson:"status"`
 }
 
 func (f *Form) Insert(ctx context.Context) error {
